--- a/apps/notes/docs/leetcode/hot-100.md
+++ b/apps/notes/docs/leetcode/hot-100.md
@@ -1,3 +1,6 @@
 # LeetCode 热题 HOT 100
 
 ### [1. Two Sum(两数之和)](./all/1-100/1-two-sum.md)
+
+
+### [2. Add Two Numbers(两数相加)](./all/1-100/2-add-two-numbers.md)
