--- a/apps/notes/docs/leetcode/hot-100.md
+++ b/apps/notes/docs/leetcode/hot-100.md
@@ -2,5 +2,6 @@
 
 ### [1. Two Sum(两数之和)](./all/1-100/1-two-sum.md)
 
-
 ### [2. Add Two Numbers(两数相加)](./all/1-100/2-add-two-numbers.md)
+
+### [3. Longest Substring Without Repeating Characters - 无重复字符的最长子串](./all/1-100/3-longest-substring-without-repeating-characters)
