--- a/apps/notes/docs/leetcode/hot-100.md
+++ b/apps/notes/docs/leetcode/hot-100.md
@@ -1,7 +1,9 @@
-# LeetCode 热题 HOT 100
+# [LeetCode 热题 HOT 100](https://leetcode-cn.com/problem-list/2cktkvj/)
 
 ### [1. Two Sum(两数之和)](./all/1-100/1-two-sum.md)
 
 ### [2. Add Two Numbers(两数相加)](./all/1-100/2-add-two-numbers.md)
 
 ### [3. Longest Substring Without Repeating Characters - 无重复字符的最长子串](./all/1-100/3-longest-substring-without-repeating-characters)
+
+### [4. Median of Two Sorted Arrays - 寻找两个正序数组的中位数](./all/1-100/4-median-of-two-sorted-arrays.md)
