docs(leetcode): sum of left leaves

--- a/apps/notes/docs/leetcode/weekly/2023/39.md
+++ b/apps/notes/docs/leetcode/weekly/2023/39.md
@@ -9,3 +9,5 @@
 ### [110. Balanced Binary Tree](../../all/101-200/110-balanced-binary-tree.md)
 
 ### [257. Binary Tree Paths](../../all/201-300/257-binary-tree-paths.md)
+
+### [404. Sum Of Left Leaves](../../all/401-500/404-sum-of-left-leaves.md)
