--- a/apps/notes/docs/leetcode/weekly/2023/39.md
+++ b/apps/notes/docs/leetcode/weekly/2023/39.md
@@ -2,12 +2,14 @@
 
 ## [559. Maximum Depth Of N Ary Tree](../../all/501-600/559-maximum-depth-of-n-ary-tree.md)
 
-### [111. Minimum Depth Of Binary Tree](../../all/101-200/111-minimum-depth-of-binary-tree.md)
+## [111. Minimum Depth Of Binary Tree](../../all/101-200/111-minimum-depth-of-binary-tree.md)
 
-### [222. Count Complete Tree Nodes](../../all/201-300/222-count-complete-tree-nodes.md)
+## [222. Count Complete Tree Nodes](../../all/201-300/222-count-complete-tree-nodes.md)
 
-### [110. Balanced Binary Tree](../../all/101-200/110-balanced-binary-tree.md)
+## [110. Balanced Binary Tree](../../all/101-200/110-balanced-binary-tree.md)
 
-### [257. Binary Tree Paths](../../all/201-300/257-binary-tree-paths.md)
+## [257. Binary Tree Paths](../../all/201-300/257-binary-tree-paths.md)
 
-### [404. Sum Of Left Leaves](../../all/401-500/404-sum-of-left-leaves.md)
+## [404. Sum Of Left Leaves](../../all/401-500/404-sum-of-left-leaves.md)
+
+## [513. Find Bottom Left Tree Value](../../all/501-600/513-find-bottom-left-tree-value.md)
