docs(leetcode): construct binary tree and getPathSum

--- a/apps/notes/docs/leetcode/weekly/2023/39.md
+++ b/apps/notes/docs/leetcode/weekly/2023/39.md
@@ -13,3 +13,7 @@
 ## [404. Sum Of Left Leaves](../../all/401-500/404-sum-of-left-leaves.md)
 
 ## [513. Find Bottom Left Tree Value](../../all/501-600/513-find-bottom-left-tree-value.md)
+
+### [112. Path Sum](../../all/101-200/112-path-sum.md)
+
+### [106. Construct Binary Tree From Inorder And Postorder Traversal](../../all/101-200/106-construct-binary-tree-from-inorder-and-postorder-traversal.md)
