--- a/apps/notes/docs/leetcode/weekly/2023/39.md
+++ b/apps/notes/docs/leetcode/weekly/2023/39.md
@@ -17,3 +17,5 @@
 ### [112. Path Sum](../../all/101-200/112-path-sum.md)
 
 ### [106. Construct Binary Tree From Inorder And Postorder Traversal](../../all/101-200/106-construct-binary-tree-from-inorder-and-postorder-traversal.md)
+
+## 09.23 周六 鸽一天，查 bug...
