docs(leetcode): 39 weekly summary

--- a/apps/notes/docs/leetcode/weekly/2023/39.md
+++ b/apps/notes/docs/leetcode/weekly/2023/39.md
@@ -19,3 +19,15 @@
 ### [106. Construct Binary Tree From Inorder And Postorder Traversal](../../all/101-200/106-construct-binary-tree-from-inorder-and-postorder-traversal.md)
 
 ## 09.23 周六 鸽一天，查 bug...
+
+## 总结
+
+1. 最大深度用层序遍历比较容易想到，递归的话直接获取子树最大深度，加起来，最后就是最大深度
+2. 最小深度用层序遍历也可以，遍历到叶子节点结束，递归思路的话主要是递归终止条件，左右节点都为空，深度为 1，存在其一不为空的情况下，非空子树深度 + 1，均不为空的情况下，返回最小子树深度 + 1
+3. 计算完全二叉树的子节点数，推导没仔细研究，略过
+4. 是否是平衡二叉树，子树非平衡二叉树返回负一，递归
+5. 二叉树所有路径，回溯法
+6. 左叶子和，遍历所有节点，找出左叶子节点，sum
+7. 寻找树的树底最左子叶，层序遍历，每一层最左子叶为结果，遍历到最后一层后，结果返回，递归同理
+8. 路径和，回溯法
+9. 根据中后序生成树，后续拿 root ,然后根据中序/后序拆左右子树，递归
