docs(english): list many new words in this News

--- a/apps/notes/docs/english/2023/41/10-07.md
+++ b/apps/notes/docs/english/2023/41/10-07.md
@@ -16,3 +16,25 @@ To survive the fallout, McCarthy would have had to ink a last-minute alliance wi
 ## New Words
 
 politician <Audio src="https://dictionary.blob.core.chinacloudapi.cn/media/audio/tom/39/c0/39C0CC6471E1A4A489DCB5B39393115E.mp3" />
+applaud
+forge
+compromise
+pay a price (to)
+pivotal
+unprecedented
+demonstration
+opponents
+wield over
+abide
+face-off
+consequence
+laid out in the terms of the deal
+fallout
+ink
+alliance
+skeptical
+negotiate
+gavel
+successor
+legislative
+disarray
