docs(leetcode): 235 bst's lca

--- a/apps/notes/docs/leetcode/weekly/2023/42.md
+++ b/apps/notes/docs/leetcode/weekly/2023/42.md
@@ -1,3 +1,5 @@
 # 2023.10.08-2023.10.14
 
 ### [236. Lowest Common Ancestor Of A Binary Tree](../../all/201-300/236-lowest-common-ancestor-of-a-binary-tree.md)
+
+### [235. Lowest Common Ancestor Of A Binary Search Tree](../../all/201-300/235-lowest-common-ancestor-of-a-binary-search-tree.md)
