--- a/apps/notes/docs/leetcode/weekly/2023/42.md
+++ b/apps/notes/docs/leetcode/weekly/2023/42.md
@@ -3,3 +3,7 @@
 ### [236. Lowest Common Ancestor Of A Binary Tree](../../all/201-300/236-lowest-common-ancestor-of-a-binary-tree.md)
 
 ### [235. Lowest Common Ancestor Of A Binary Search Tree](../../all/201-300/235-lowest-common-ancestor-of-a-binary-search-tree.md)
+
+### [701. Insert Into A Binary Search Tree](../../all/701-800/701-insert-into-a-binary-search-tree.md)
+
+### [450. Delete Node In A Bst](../../all/401-500/450-delete-node-in-a-bst.md)
