docs(leetcode): the milestone of the binary tree

--- a/apps/notes/docs/leetcode/weekly/2023/42.md
+++ b/apps/notes/docs/leetcode/weekly/2023/42.md
@@ -7,3 +7,9 @@
 ### [701. Insert Into A Binary Search Tree](../../all/701-800/701-insert-into-a-binary-search-tree.md)
 
 ### [450. Delete Node In A Bst](../../all/401-500/450-delete-node-in-a-bst.md)
+
+### [538. Convert Bst To Greater Tree](../../all/501-600/538-convert-bst-to-greater-tree.md)
+
+### [669. Trim A Binary Search Tree](../../all/601-700/669-trim-a-binary-search-tree.md)
+
+### [108. Convert Sorted Array To Binary Search Tree](../../all/101-200/108-convert-sorted-array-to-binary-search-tree.md)
