docs(leetcode): combinations

--- a/apps/notes/docs/leetcode/weekly/2023/42.md
+++ b/apps/notes/docs/leetcode/weekly/2023/42.md
@@ -13,3 +13,7 @@
 ### [669. Trim A Binary Search Tree](../../all/601-700/669-trim-a-binary-search-tree.md)
 
 ### [108. Convert Sorted Array To Binary Search Tree](../../all/101-200/108-convert-sorted-array-to-binary-search-tree.md)
+
+### [216. Combination Sum Iii](../../all/201-300/216-combination-sum-iii.md)
+
+### [77. Combinations](../../all/1-100/77-combinations.md)
